[ADD] Fetching initial data for ride history and ride details from backend